# rust_minix

./: BUILD_CONFIG.md  Cargo.toml  INTERRUPT_SYSTEM.md  README.md  build.rs  kernel.map  kernel8.img  linker.ld  output.txt  test_multicore.ps1
.cargo/: config.toml
scripts/: qemu.ps1  qemu.sh  rpi3.sh  test_interrupts.sh
src/: boot.rs  macros.rs  main.rs  panic.rs
src/arch/: aarch64.rs  exceptions.S  exceptions.rs  mod.rs  multicore.rs
src/drivers/: display.rs  gic.rs  mod.rs  timer.rs  uart.rs
src/memory/: allocator.rs  mmu.rs  mod.rs
